--- a/resources/com.sap.piper/pipeline/stageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/stageDefaults.yml
@@ -13,7 +13,7 @@ stages:
       npmExecuteScripts:
         configKeys:
           - 'runScripts'
-  Build:
+  'Build:
     stepConditions:
       sonarExecuteScan:
         filePattern: '**/sonar-project.properties'
@@ -26,7 +26,7 @@ stages:
       npmExecuteScripts:
         configKeys:
           - 'runScripts'
-  Integration:
+  'Integration:
     stepConditions:
       npmExecuteScripts:
         configKeys:
